--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Get your OpenAI API Key here: https://platform.openai.com/account/api-keys
-OPENAI_API_KEY=****
+OPENAI_API_KEY=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
 
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
-AUTH_SECRET=****
+AUTH_SECRET=e3b72c9647d6f43aef0fa74d3d870e5b
 
 # The following keys below are automatically created and
 # added to your environment when you deploy on vercel
@@ -11,4 +11,4 @@ AUTH_SECRET=****
 BLOB_READ_WRITE_TOKEN=****
 
 # Instructions to create a database here: https://vercel.com/docs/storage/vercel-postgres/quickstart
-POSTGRES_URL=****
+POSTGRES_URL=postgres://neondb_owner:XPHIW0Eal8Bn@ep-icy-flower-a49vibj6-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
