--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ AUTH_SECRET=e3b72c9647d6f43aef0fa74d3d870e5b
 BLOB_READ_WRITE_TOKEN=****
 
 # Instructions to create a database here: https://vercel.com/docs/storage/vercel-postgres/quickstart
-POSTGRES_URL=postgres://neondb_owner:XPHIW0Eal8Bn@ep-icy-flower-a49vibj6-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_URL=postgresql://chatdb_owner:PDAxR1CJyTv6@ep-solitary-feather-a17yy373-pooler.ap-southeast-1.aws.neon.tech/chatdb?sslmode=require
