--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Get your OpenAI API Key here: https://platform.openai.com/account/api-keys
-OPENAI_API_KEY=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
+OPENAI_API_KEY=****
 
 # The following keys below are automatically created and
 # added to your environment when you deploy on vercel
@@ -8,4 +8,4 @@ OPENAI_API_KEY=sk-proj-PFsC2Fj1dmfAW5CnUFr1AAtYYUa37wqv248cCfoa9JScz6gOiFdj-u2vR
 BLOB_READ_WRITE_TOKEN=****
 
 # Instructions to create a database here: https://vercel.com/docs/storage/vercel-postgres/quickstart
-POSTGRES_URL=postgres://neondb_owner:pvxn7rUBEW9f@ep-plain-sky-a14mj6hq-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_URL=****
